--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -26,3 +26,9 @@ spring:
 #    register-with-eureka: true
 #    service-url:
 #      defaultZone: http://localhost:8761/eureka
+
+
+okta:
+  oauth2:
+    issuer: https://dev-27241892.okta.com/oauth2/default
+    audience: api://default
