--- a/RatingService/src/main/resources/application.yml
+++ b/RatingService/src/main/resources/application.yml
@@ -20,3 +20,8 @@ spring:
 #    register-with-eureka: true
 #    service-url:
 #      defaultZone: http://localhost:8761/eureka
+
+okta:
+  oauth2:
+    issuer: https://dev-27241892.okta.com/oauth2/default
+    audience: api://default
