--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -23,6 +23,27 @@ spring:
   config:
     import: configserver:http://localhost:8086
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://dev-27241892.okta.com/oauth2/default
+      client:
+        registration:
+          my-internal-client:
+            provider: okta
+            authorization-grant-type: client-credentials
+            scope: internal
+            client-id: 0oa99f46rpTIVU9Md5d7
+            client-secret: GHyDl1eTyZS8QuZs18ZBWKpM7EPPORp-shhTpa5f
+        provider:
+          okta:
+            issuer-uri: https://dev-27241892.okta.com/oauth2/default
+
+
+
+
+
 
 #management:
 #  health:
@@ -59,7 +80,10 @@ spring:
 #      defaultZone: http://localhost:8761/eureka
 
 
-
+okta:
+  oauth2:
+    issuer: https://dev-27241892.okta.com/oauth2/default
+    audience: api://default
 
 
 
